--- a/templates/index.html
+++ b/templates/index.html
@@ -166,15 +166,8 @@
       <label>氏名</label>
       <input type="text" name="name" placeholder="氏名" required>
 
-      <!-- <label>国または地域</label>
-      <select name="country">
-        <option>日本</option>
-        <option>アメリカ</option>
-        <option>カナダ</option>
-      </select> -->
-
       <div class="checkbox">
-        <p class="small">Linkが使えるすべての場所で安全にお支払いください。</p>
+        <p class="small">すべての個人情報は第三者にて安全に保存いたします。</p>
       </div>
 
       <button type="submit">申し込む</button>
@@ -188,8 +181,8 @@
     <h2>申し込みが完了しました！</h2>
     <p>担当者が確認後ご連絡をいたしますので、少々お待ちください。<br>確認には最大24時間かかる可能性がございます。</p>
     <!-- <p><a href="{{ url }}" target="_blank">{{ url }}</a></p>
-    <p>パスワード：<strong>{{ pw }}</strong></p>
-    <button onclick="document.getElementById('popup').style.display='none'">閉じる</button> -->
+    <p>パスワード：<strong>{{ pw }}</strong></p> -->
+    <button onclick="document.getElementById('popup').style.display='none'">閉じる</button>
   </div>
 </div>
 
