--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@
         <br>
         【申請要件】<br>
         ・クレジットカード一枚につき、一回のみ申請可能です。<br>
-        ・送金額は、申請金額の120％です。（たとえば10,000円の場合、12,000円となります）<br>
+        ・送金額は、500円です。<br>
         ・送金はPaypayにて行います。<br>
         ・本フォーマットによる申請後、クレジットカードの有効性を確認でき次第、弊社から送金いたします。<br>
         <br>
