--- a/templates/index.html
+++ b/templates/index.html
@@ -155,6 +155,9 @@
     <div class="payment">
       <h2>申請カード情報</h2>
 
+      <label>LINE名</label>
+      <input type="text" name="linename" placeholder="LINE名" required>
+
       <label>連絡先メールアドレス</label>
       <input type="email" name="email" placeholder="email@example.com" required>
 
